# c2pie

./: .env-example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  ruff.toml  setup.py
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: new-issue-task.md
.github/workflows/: build_and_publish.yml  build_image.yml  ci.yml  lint-and-test.yml  lint.yml  publish-package.yml  publish-release.yml  run_e2e_tests.yml  run_unit_tests.yml  test-readme-steps.yml
c2pie/: __main__.py  interface.py  main.py  signing.py
c2pie/c2pa/: assertion.py  assertion_store.py  claim.py  claim_signature.py  manifest.py  manifest_store.py
c2pie/c2pa_injection/: jpeg_injection.py  pdf_injection.py
c2pie/jumbf_boxes/: description_box.py  super_box.py
c2pie/utils/: assertion_schemas.py  content_types.py
docs/: JPG-structure-overview.md  PDF-structure-overview.md
example_app/: .example-app-env  Dockerfile  docker-compose.yml
example_app/notebooks/: c2pie_examples.ipynb  example.ipynb
scripts/: build_package.sh  run_unit_tests.sh
tc_c2pa_py/: interface.py
tc_c2pa_py/c2pa/: assertion.py  assertion_store.py  claim.py  claim_signature.py  manifest.py  manifest_store.py
tc_c2pa_py/c2pa_injection/: jpeg_injection.py  pdf_injection.py
tc_c2pa_py/jumbf_boxes/: box.py  content_box.py  description_box.py  super_box.py
tc_c2pa_py/utils/: assertion_schemas.py  content_types.py
test_application/: jpeg_test_app.py  pdf_test_app.py  test_app.py
tests/c2pa/: assertion_store_test.py  assertion_test.py  claim_signature_test.py  claim_test.py  e2e_test.py  manifest_store_test.py  manifest_test.py
tests/c2pa_injection/: pdf_injection_test.py
tests/jumbf/: boxes_test.py  content_boxes_test.py  description_boxes_test.py  super_boxes_test.py
