[tool.poetry]
name = "c2pie"
version = "0.2.0"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[project]
name = "c2pie"
description = "The c2pie is a Python library that provides C2PA standard functionality."
authors = [ 
  { name="Tourmaline Core", email="contact@tourmalinecore.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    'Operating System :: Microsoft :: Windows',
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/TourmalineCore/c2pie"
Issues = "https://github.com/TourmalineCore/c2pie/issues"

[project.scripts]
c2pie = 'c2pie.main:main'

[tool.poetry.dependencies]
python = "^3.9,<3.15"
cbor2 = "^5.6.3"
cryptography = "^42.0.5"
pytz = "^2024.1"
cffi = "<=2.0.0"
pypdf = "^6.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^7.0.0"
ruff = "^0.13.2"

[build-system]
requires = ["poetry>=1.8.3"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
markers = [
    "e2e: marks tests as e2e",
]

[tool.coverage.run]
omit = [
  "*_test.py",
  "*/__init__.py",
]

[tool.coverage.report]
show_missing = true